<resources>
    <string name="app_name">mYoutube</string>
    <string name="home">Home</string>
    <string name="my_video">My Video</string>
    <string name="user">User</string>
    <string name="feature">Feature</string>
    <string name="movie">Movies</string>
    <string name="music">Music</string>
    <string name="trending">Trending</string>
    <string name="gaming">Gaming</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>